	deprecated but can still be supported for running old scripts (i.e.
	scripts that do not use any modern syntax that would conflict with the
	deprecated commands).

	* src/datafile.c:  backwards compatibility support for "thru"

	* src/set.c src/gadgets.c src/gadgets.h src/save.c src/unset.c:
	backwards compatibility support for "set style increment user"

2013-12-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/stdfn.c config/mingw/Makefile:  Some versions of MinGW are missing
	a cexp() implementation. Supply our own.

	* config/mingw/Makefile:  Create timestamp.h for non-release builds.
	
2013-12-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_call):  Repair odd side effect of recent "notitle"
	patch.  "plot FOO notitle lw (1/2)"  contains what looks like an
	undefined string function lw().  Explicitly ignore this just as we 
	would an undefined string variable.

2013-12-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc term-ja.diff:  Sync translation to version 1.840

2013-12-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wcommon.h src/win/wgraph.c src/win/winmain.c src/win/wmenu.c
	src/win/wprinter.c src/win/wtext.c:  No need to have separate code
	for win32 and win64 since minimal supported platform is XP.  System 
	headers deal with that already. Also include Allin Cottrell's patch to
	the dialog callbacks. The correct return type is indeed INT_PTR.

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:  Implement
	modify_plots() terminal interface.

	* term/win.trm (WIN_layer):  Ignore TERM_LAYER_RESET in multiplot
	mode.

2013-12-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/graphics.h src/mouse.c src/parse.c
	src/plot2d.c src/save.c src/save.h src/set.c src/show.c src/tables.c
	src/tables.h src/unset.c:

	New plot style "with parallelaxes".
